--- a/public/assets/scss/core/core.scss
+++ b/public/assets/scss/core/core.scss
@@ -3,3 +3,5 @@
 @import '../../scss/core/common.scss';
 @import '../../scss/core/header';
 @import '../../scss/core/sidebar';
+@import '../../scss/core/footer';
+
