--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -104,9 +104,27 @@ h4 {
 }
 h5 {
     font-size: 22px;
+    @media #{$max-xl}{
+        font-size: 20px;
+    }
+    @media #{$max-lg}{
+        font-size: 18px;
+    }
+    @media #{$max-md}{
+        font-size: 16px;
+    }
 }
 h6 {
     font-size: 20px;
+    @media #{$max-xl}{
+        font-size: 18px;
+    }
+    @media #{$max-lg}{
+        font-size: 16px;
+    }
+    @media #{$max-md}{
+        font-size: 14px;
+    }
 }
 
 p{
@@ -207,6 +225,7 @@ ul {
     }
     @media #{$max-xl}{
         padding: 9px 20px;
+        font-size: 14px;
     }
     @media #{$max-lg}{
         padding: 7px 20px;
