worked on assets page design implementation

--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -7,6 +7,8 @@ $body-bg:#151B28;
 $body-bg-800:#0C0F17;
 $secondary:#1C1B23;
 $secondary-800:#24232B;
+$grey-color: #596380;
+$grey-color-800:#E9E9EC;
 
 // 
 
