--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -4,6 +4,8 @@
     margin-top: 100px;
     border-radius: 40px;
     padding: 20px;
+    width: calc(100% - 240px);
+    margin-left: auto;
 }
  
 .assets_top_area{
