changes updated in home page

--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -16,6 +16,13 @@
         @media #{$max-sm}{
             max-width: 110px;
         }
+    }   
+}
+.nav-link{
+    font-size: 16px;
+    font-weight: 600;
+    color: $white;
+    &:hover{
+        color: $white;
     }
-    
 }
