--- a/public/assets/scss/core/core.scss
+++ b/public/assets/scss/core/core.scss
@@ -4,4 +4,5 @@
 @import '../../scss/core/header';
 @import '../../scss/core/sidebar';
 @import '../../scss/core/footer';
+@import '../../scss/core/dashboard';
 
