--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -214,7 +214,11 @@ ul {
         max-width: 920px;
     }
 } 
-
+.btn:first-child:hover {
+    color: var(--bs-btn-hover-color);
+    background-color: var(--bs-btn-hover-bg);
+    border-color: var(--bs-btn-hover-border-color);
+}
 .btn{
     border-radius: 10px;
     font-weight: 500;
@@ -232,7 +236,6 @@ ul {
         padding: 7px 20px;
     }
 }
-
 .primary-btn{
     background:$primary-gradient;
     color:rgba($white, 0.89);
@@ -240,6 +243,7 @@ ul {
     &:hover{
         background:$primary-gradient;
         color:rgba($white, 0.89);
+        opacity: 0.9;
     }
 }
 
@@ -248,8 +252,9 @@ ul {
     color: rgba($white, 0.89);
     // border: 1px solid rgba(255, 255, 255, 0.4);
     &:hover{
-        background:$secondary;
+        background:$secondary !important;
         color: rgba($white, 0.89);
+        opacity: 0.9;
     }
 }
 .primary-gradient-text {
