--- a/public/assets/scss/pages/assets.scss
+++ b/public/assets/scss/pages/assets.scss
@@ -4,6 +4,9 @@
     margin: 30px 0;
     display: flex;
     justify-content: space-between;
+    @media #{$max-xxl}{
+            flex-wrap: wrap;  
+    }
 }
 .main_net_amnt{
     background-color:$body-bg;
@@ -33,10 +36,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @media #{$max-xxl}{
+        .btn:first-child{
+            margin-bottom: 10px;
+        }
+    }
 }
 .lrg_btns_area{
     background-color: $body-bg;
-    padding: 16px 20px;
+    padding: 16px 20px !important; 
     border-radius: 20px;
 }
 .lrg_btns_area a:first-child{
@@ -58,7 +66,24 @@
 }
 .t_a_clm{
     flex: 1;
+    @media #{$max-xxl}{
+        flex: 0 0 50%;
+        height: 100%;
+        margin-bottom: 20px;
+   }
+   @media #{$max-lg }{
+        flex: 0 0 100%;
+   }
 }
 .t_a_clm:nth-child(2){
     margin: 0 30px;
+    @media #{$max-xxl}{
+       margin-left: 0px;
+       margin-right: 0px; 
+       padding:10px 20px;
+       margin-bottom: 20px;
+    }
+    @media #{$max-lg }{
+        padding: 10px 0;
+    }
 }
