--- a/public/assets/scss/core/_dashboard.scss
+++ b/public/assets/scss/core/_dashboard.scss
@@ -1,3 +1,10 @@
+.menu-btn{
+    display: none;
+    @media #{$max-lg}{
+        display: inline-block;
+    }
+}
+
 .cmn_dashbord_main_outr{
     background-color: $body-bg-800;
     margin: 32px 20px 32px auto;
@@ -23,10 +30,20 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 99;
+    transition: transform 0.5s;
     @media #{$max-lg}{
-        display: none;
+        transform: translateX(-237px);
+        opacity: 0;
+        transition: transform 0.5s;
+    }
+    &.sidebar-active{
+        transform: translateX(0);
+        opacity: 1;
+        transition: transform 0.5s;
     }
     .sidebar-logo {
+        position: relative;
         padding: 30px 20px 70px;
         @media #{$max-xxl}{
             padding: 22px 15px 40px;
@@ -34,10 +51,17 @@
         @media #{$max-xl}{
             padding: 15px 15px 30px;
         }
-        // @media #{$max-xl}{
-        //     padding: 15px 15px 30px;
-        // }
+        @media #{$max-lg}{
+            padding: 40px 15px 30px;
+        }
+        .close-icon {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            max-width: 24px;
+        }
     }
+
     .side-menu {
         padding: 0 20px;
         @media #{$max-xxl}{
