changes updated in sidebar

--- a/public/assets/scss/core/_dashboard.scss
+++ b/public/assets/scss/core/_dashboard.scss
@@ -59,6 +59,10 @@
             top: 10px;
             right: 10px;
             max-width: 24px;
+            display: none;
+            @media #{$max-lg}{
+                display: block;
+            }
         }
     }
 
