--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
 @import '../scss/core/core.scss';
 @import '../scss/fonts/fonts.scss';
-@import '../scss/pages/pages.scss'
+@import '../scss/pages/pages.scss';
+@import '../index.css'
