--- a/public/assets/scss/pages/validator.scss
+++ b/public/assets/scss/pages/validator.scss
@@ -1,11 +1,12 @@
 .top_bnr_area{
-    background-color:$body-bg-800;
-    padding: 50px 0;
+    background-color:$body-bg;
+    padding: 70px 0;
 }
 
 .mid_cnt_area{
     padding: 100px 0;
     text-align: center;
+    background-color: $body-bg-800;
     h3{
         margin-top: 15px;
     }
