added bone staking page

--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -5,6 +5,7 @@ $primary:#F06500;
 $white:#FFFFFF;
 $body-text:#BBBBBE;
 $body-bg:#151B28;
+$body-bg-secondry:#1E1E1E;
 $body-bg-800:#0C0F17;
 $secondary:#1C1B23;
 $secondary-800:#24232B;
