--- a/public/assets/scss/core/core.scss
+++ b/public/assets/scss/core/core.scss
@@ -5,4 +5,5 @@
 @import '../../scss/core/sidebar';
 @import '../../scss/core/footer';
 @import '../../scss/core/dashboard';
+@import '../../scss/core/bone-staking';
 
