--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -2,4 +2,4 @@
 @import '../scss/core/core.scss';
 @import '../scss/fonts/fonts.scss';
 @import '../scss/pages/pages.scss';
-@import '../index.css'
+// @import '../index.css'
