completed bone staking page

--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -11,7 +11,7 @@ $secondary:#1C1B23;
 $secondary-800:#24232B;
 $grey-color: #596380;
 $grey-color-800:#E9E9EC;
-
+$green-color:#437c1b;
 // 
 
 $min-exl: 'only screen and (min-width: 1920px)';
