--- a/public/assets/scss/core/bone-staking.scss
+++ b/public/assets/scss/core/bone-staking.scss
@@ -66,7 +66,7 @@
     margin-top: 0;
     border-radius: 0;
     height: 100%;
-    margin-bottom: 0;
+    margin-bottom: 30px;
     padding: 0;
 }
 .top-head {
