--- a/public/assets/scss/pages/validator.scss
+++ b/public/assets/scss/pages/validator.scss
@@ -1,7 +1,8 @@
 .top_bnr_area{
-    background-color:$body-bg;
+    // background-color:$body-bg;
     padding: 70px 0;
 }
+
 
 .mid_cnt_area{
     padding: 100px 0;
