--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -37,3 +37,29 @@
         margin-right: 12px;
     }
 }
+.staking-header{
+    border-bottom: 1px solid $grey-color;
+    .nav-item {
+        margin-right: 4px;
+    }
+    .nav-link {
+        padding: 10px 10px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            bottom: -1px;
+            left: 0;
+            right: 0;
+            top: auto;
+        }
+        &.active{
+            color: $primary;
+          &::before{
+                background:$primary;
+          }  
+        }
+    }
+}
