--- a/public/assets/scss/core/core.scss
+++ b/public/assets/scss/core/core.scss
@@ -6,4 +6,5 @@
 @import '../../scss/core/footer';
 @import '../../scss/core/dashboard';
 @import '../../scss/core/bone-staking';
+@import '../../scss/core/faucet';
 
