--- a/public/assets/scss/core/bone-staking.scss
+++ b/public/assets/scss/core/bone-staking.scss
@@ -25,7 +25,7 @@
 }
 .section-info {
     padding: 0px 20px 30px;
-    margin-top: 40px;
+    // margin-top: 40px;
 }
 .btns-sec {
     display: flex;
