--- a/public/assets/scss/core/_header.scss
+++ b/public/assets/scss/core/_header.scss
@@ -39,6 +39,7 @@
 }
 .staking-header{
     border-bottom: 1px solid $grey-color;
+    border-top: 1px solid $grey-color;
     .nav-item {
         margin-right: 4px;
     }
