added all validator page

--- a/public/assets/scss/core/_cus-var.scss
+++ b/public/assets/scss/core/_cus-var.scss
@@ -2,6 +2,7 @@
 // variable for new design
 $primary-gradient:linear-gradient(180deg, #F06500 0%, #F28B03 100%);
 $primary:#F06500;
+$primary-two:#f17d02;
 $white:#FFFFFF;
 $body-text:#BBBBBE;
 $body-bg:#151B28;
