--- a/public/assets/scss/core/_reset.scss
+++ b/public/assets/scss/core/_reset.scss
@@ -326,6 +326,7 @@ ul {
     }
     .table td span{
         padding-right: 15px;
+        vertical-align: middle;
     }
     .table td a{
         text-decoration: none;
