--- a/public/assets/scss/core/core.scss
+++ b/public/assets/scss/core/core.scss
@@ -7,4 +7,5 @@
 @import '../../scss/core/dashboard';
 @import '../../scss/core/bone-staking';
 @import '../../scss/core/faucet';
+@import '../../scss/core/all-validator';
 
