withdraw page added

--- a/public/assets/scss/core/core.scss
+++ b/public/assets/scss/core/core.scss
@@ -8,4 +8,5 @@
 @import '../../scss/core/bone-staking';
 @import '../../scss/core/faucet';
 @import '../../scss/core/all-validator';
+@import '../../scss/core/withdraw';
 
