--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -12,6 +12,9 @@
 .primary-text{
     color: $primary !important;
 }
+.lite-color{
+    color: $grey-color;
+}
 /** text color start **/
 .top-space{
     padding-top: 76px;
@@ -395,5 +398,8 @@
 // }
 .full-vh {
     min-height: 100vh
+}
+.fw-bold{
+    font-weight: 700;
 }
 
