changes updated in assets page

--- a/public/assets/scss/core/_dashboard.scss
+++ b/public/assets/scss/core/_dashboard.scss
@@ -1,7 +1,9 @@
 .menu-btn{
     display: none;
+    max-width: 30px;
     @media #{$max-lg}{
         display: inline-block;
+        max-width: 25px;
     }
 }
 
