--- a/public/assets/scss/core/common.scss
+++ b/public/assets/scss/core/common.scss
@@ -62,7 +62,12 @@
         padding-bottom: calc(30px - 20px);
     }
 }
-
+.mb-32{
+    margin-bottom: 32px;
+}
+.pb-32{
+    padding-bottom: 32px;
+}
 // common space closed
 .heading {
     margin-bottom: 32px;
